Mon Jun 11 14:29:41 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* confgure.in: add RUBY_CANONICAL_BUILD.

Sat Jun  9 17:04:30 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* hash.c (ruby_setenv): readline library leaves their environment
	  strings uncopied.  "free" check revised.

Fri Jun  8 18:14:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (numhash): should shuffle bits by dividing by prime number.

Fri Jun  8 22:37:40 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (Init_stack): avoid __builtin_frame_address(2) to retrieve
	  stack bottom line.

Fri Jun  8 18:14:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (numhash): should shuffle bits by dividing by prime number.

Fri Jun  8 15:25:09 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_require): should set SCOPE_PUBLIC before calling
	  dln_load().

Wed Jun  6 16:11:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_load): should check if tainted even when wrap is
	  specified.

Wed Jun  6 14:34:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): too much optimization for the
	  cases like /(.|a)b/.

Tue Jun  5 23:58:43 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (fc_i): removed vast string allocation.

Tue Jun  5 15:16:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_add_method): should not call rb_secure(), for
	  last_func may not be set.

	* io.c (rb_io_ctl): ioctl should accept any integer within C long
	  range.

Tue Jun  5 13:41:13 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/etc/extconf.rb: use egrep_cpp.

Tue Jun  5 12:44:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (r_object): wrong type check for modules.

	* marshal.c (w_object): should not dump anonymous classes/modules.

Mon Jun  4 17:57:56 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.4 released.

Mon Jun  4 04:14:53 2001  Wakou Aoyama  <wakou@fsinet.or.jp>
